[gd_scene load_steps=8 format=3 uid="uid://bqaeo7l8e6b7l"]

[ext_resource type="Script" uid="uid://bduqcgjswpdow" path="res://game/entities/creatures/player/weapons/homing_missile.gd" id="1_j864u"]
[ext_resource type="Texture2D" uid="uid://cyvte4dim51po" path="res://assets/sprites/player/weapons/SpreaderPowerupBullet.png" id="2_llg4c"]
[ext_resource type="Texture2D" uid="uid://cqc6bvqop0bt0" path="res://assets/sprites/GameLogoTest.webp" id="3_a6ut0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j864u"]
size = Vector2(15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb8ba"]
atlas = ExtResource("2_llg4c")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_60i8j"]
atlas = ExtResource("3_a6ut0")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_60i8j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb8ba")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60i8j")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}]

[node name="homing_missile" type="Area2D"]
z_as_relative = false
script = ExtResource("1_j864u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j864u")

[node name="rocket_sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_60i8j")
autoplay = "default"

[node name="despawn_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
